FVM explained, with reference

--- a/References/References.bib
+++ b/References/References.bib
@@ -271,6 +271,22 @@
 	pages = {R35}
 }
 
+@incollection{eymard_finite_2003,
+	title = {Finite {Volume} {Methods}},
+	volume = {7},
+	isbn = {9780444509062},
+	url = {https://old.i2m.univ-amu.fr/~herbin/PUBLI/bookevol.pdf},
+	abstract = {This series of volumes covers all the major aspects of numerical analysis, serving as the basic reference work on the subject. Each volume concentrates on one to three particular topics. Each article, written by an expert, is an in-depth survey, reflecting up-to-date trends in the field, and is essentially self-contained. The handbook will cover the basic methods of numerical analysis, under the following general headings: solution of equations in Rn; finite difference methods; finite element methods; techniques of scientific computing; optimization theory; and systems science. It will also cover the numerical solution of actual problems of contemporary interest in applied mathematics, under the following headings: numerical methods for fluids; numerical methods for solids; and specific applications - including meteorology, seismology, petroleum mechanics and celestial mechanics.},
+	language = {English},
+	booktitle = {Handbook of {Numerical} {Analysis}},
+	publisher = {Elsevier},
+	author = {Eymard, R. and Gallouët, T. and Herbin, R.},
+	editor = {Ciarlet, P.G. and Lions, J.L.},
+	month = jan,
+	year = {2003},
+	pages = {253}
+}
+
 @book{freidberg_ideal_1987,
 	edition = {1st},
 	title = {Ideal {Magnetohydrodynamics}},
