--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -22,6 +22,7 @@
 \author{\me}
 
 \usepackage{fullpage, indentfirst, graphicx, amsmath, float}
+\linespread{1.1}
 \usepackage[dvipsnames]{xcolor}
 \usepackage[labelfont=bf]{caption}
 \usepackage[toc]{appendix}
@@ -114,6 +115,7 @@
 %\input{ABSTRACT FILE HERE!!}
 \addcontentsline{toc}{chapter}{Abstract}
 
+\clearemptydoublepage
 \tableofcontents
 \newpage
 
