--- a/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
+++ b/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
@@ -154,7 +154,7 @@ The first term on the right-hand side is a linear growth term, with $\gamma_L$ a
 The second term is a nonlinear saturation term, with $\alpha_\text{sat}$ as the saturation rate.
 The maximum turbulence is the ratio of the linear growth rate to the saturation rate.
 
-It is now accepted that turbulent transport at the edge is particularly suppressed by shear in the flow of the (radial) $\mathbf{E}\times\mathbf{B}$ drift \cite{terry_suppression_2000}.
+It is now accepted that turbulent transport at the edge is particularly suppressed by shear in the flow of the $\mathbf{E}\times\mathbf{B}$ drift \cite{terry_suppression_2000}.
 The shear stress dissociates smaller turbulent structures, with their energy and momenta transferred to larger flows.
 This flow shear can be modeled as a ratio of the electromagnetic fields given by \cite{staps_backstepping_2017}
 \begin{align} % Shear velocity
