--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -22,6 +22,7 @@
 \author{\me}
 
 \usepackage{fullpage, indentfirst, graphicx, amsmath, float}
+\usepackage{cancel}
 \linespread{1.1}
 \usepackage[dvipsnames]{xcolor}
 \usepackage[labelfont=bf]{caption}
