--- a/Thesis/Dynamical_Model/Dynamical_Model.tex
+++ b/Thesis/Dynamical_Model/Dynamical_Model.tex
@@ -27,43 +27,49 @@ It is important to note that these fluxes omit explicit drift velocities as well
 
 The particle and heat diffusivities $D$ and $\chi$ are considered to be functions of the turbulence.
 The L-H transition is not expected to be caused by a difference in form between the two diffusivities.
-It is therefore assumed they are proportional
+It is therefore assumed they are proportional as 
 \begin{align} % chi-D relation
 	\chi \,=\, \frac{D}{\zeta (\gamma - 1)} \label{eq:heat_particle_diff_relation}~.
 \end{align}
-The parameter $\zeta$ determines the coupling strength of the two diffusivities. The specifics of the forms chosen for the diffusivities is discussed in Section~\ref{sec:diffusivities}.
+The parameter $\zeta$ determines the coupling strength of the two diffusivities.
+It is customarily set to 0.5, giving the relation of $\chi = 3 D$.
+The specifics of the forms chosen for the diffusivities is discussed in Section~\ref{sec:diffusivities}.
 
-In order to simplify the model, substituting the following definition of the internal energy should be made.
+In order to simplify the model, substituting the following definition of the internal energy density should be made.
 \begin{align} % U definition
 	U \,\equiv\, \frac{n T}{\gamma - 1} \label{eq:U_definition}
 \end{align}
 In addition, one of the liberties taken to simplify the model is that a single temperature is used, \emph{i.e.} the electron and ion temperatures are assumed identical.
-Making this substitution, along with the particle and heat fluxes, we can arrive at relegated forms of Equations~\ref{eq:n_continuity} and \ref{eq:U_continuity}.
+Making this substitution, along with the particle and heat fluxes, we can arrive at abridged forms of Equations~\ref{eq:n_continuity} and \ref{eq:U_continuity}.
 
 \begin{align} % Compact transport equations
 	\frac{\partial n}{\partial t} \,&=\, \frac{\partial}{\partial x} \left[D \,
 		\frac{\partial n}{\partial x}\right]~,\label{eq:n_compact} \\
 	\frac{\partial(n\,T)}{\partial t} \,&=\, \frac{\partial}{\partial x}
 		\left[\frac{D\,n}{\zeta} \, \frac{\partial T}{\partial x}\right]
-		\,+\, \frac{\partial}{\partial x}
-		\left[D\,T \, \frac{\partial n}{\partial x}\right]~. \label{eq:U_compact}
+		\,+\, \frac{\partial}{\partial x} \left[D\,T \,
+		\frac{\partial n}{\partial x}\right]~. \label{eq:U_compact}
 \end{align}
 
 The product rules of the derivatives can subsequently be worked out to obtain a further-reduced form.
 One convenience is that Equation~\ref{eq:n_continuity} shows up as a collection of terms within Equation \ref{eq:U_compact}.
 This allows those terms to vanish:
 \begin{align} % More reduced temperature equation
-	\frac{\partial T}{\partial t} \,&=\, \frac{\partial}{\partial x} \left[\frac{D}{\zeta} 
-		\, \frac{\partial T}{\partial x}\right] \,+\,
+	\frac{\partial T}{\partial t} \,&=\, \frac{\partial}{\partial x}
+		\left[\frac{D}{\zeta} \, \frac{\partial T}{\partial x}\right] \,+\,
 		\left(1 + \frac{1}{\zeta}\right) \frac{\partial n}{\partial x} \,
 		\frac{\partial T}{\partial x}~. \label{eq:T_compact}
 \end{align}
+Due to the clearly-defined diffusion terms, Eq.~\ref{eq:U_compact} is the form implemented in the solver.
 
 \section{Nonambipolar Particle Fluxes}\label{sec:nonambipolar_fluxes}
 As described in Section~\ref{ssec:E_r}, the dynamics of the radial electric field will be determined by investigating the various nonambipolar fluxes.
+Particular turbulent and neoclassical phenomena affect ions and electrons differently.
+Ultimately, these effects lead to some form of charge separation, inducing a nonambipolar particle flux.
 The fluxes chosen for this analysis comes from a compilation by Callen \cite{callen_toroidal_2009}, Itoh and Itoh \cite{itoh_role_1996}, and Stringer \cite{stringer_explanation_1993}.
 
-For added context, the profiles of these fluxes will also be given with a typical L-- and H--mode density, temperature, and $Z$ profiles, given in Figures~.
+For added context, the profiles of these fluxes will also be given with abstract L-- and H--mode density, temperature, and $Z$ profiles, given in Figures~.
+
 
 \subsection{Polarization Current}\label{ssec:polarization_current}
 In Maxwell's correction of Amp\`ere's law, a polarization current is induced whenever the time derivative of an electric field is non-zero.
@@ -76,15 +82,16 @@ This originates from the changing state of polarization.
 This is larger than the classical polarization by a factor of $B^2 / B_\theta^2$ \cite{hinton_neoclassical_1984}.
 \todo{\color{red}FINISH!}
 
+
 \subsection{Shear Viscosity}\label{ssec:shear_viscosity}
 The ion shear (perpendicular) viscosity is the perpendicular component of the viscous stress tensor.
 In the L--H transition, it can be viewed as coupling the L-- and H--mode solutions spatially.
 It is expressed by Itoh \emph{et al.} \cite{itoh_elmy_1993} as
 \begin{align} % Shear Viscosity Current
-	J^{\pi\perp} \,=\, \nabla \left(\frac{e \, \mu_i \, n \, \rho_{\theta i}}
+	J^{\pi\perp} \,=\, \nabla \cdot \left(\frac{e \, \mu_i \, n \, \rho_{\theta i}}
 		{v_{T_i}} \, \nabla\left(\frac{E_r}{B_\theta}\right)\right) \,=\,
-		\nabla \left(\frac{m_i \, n \, \mu_i}{B_\theta^2} \, \nabla E_r\right)~.
-		\label{eq:shear_visc_current_definition}
+		\nabla \cdot \left(\frac{m_i \, n \, \mu_i}{B_\theta^2} \,
+		\nabla E_r\right)~. \label{eq:shear_visc_current_definition}
 \end{align}
 The ion shear viscosity coefficient $\mu_i$ is assumed to be constant over space for simplicity.
 Reducing this expression to the one radial direction, and introducing the perpendicular dielectric permittivity $\epsilon_\perp$ \cite{kiviniemi_numerical_2001} gives
@@ -107,10 +114,11 @@ Normalizing this expression such that it is expressed in terms of $Z$ results in
 	\Gamma^{\pi\perp} \,=\, \frac{m_i \, \mu_i \, n \, T}{e^2 \, \rho_{\theta i}}
 		\, \frac{\partial^2 Z}{\partial x^2} \label{eq:shear_current_Z}
 \end{align}
-Refer to Appendix \ref{chapter:Normalization} to see the derivation.
+Refer to Appendix \ref{chapter:Normalization} to see the derivation of this normalized form.
 
 
 \subsection{Bulk Viscosity}\label{ssec:bulk_viscosity}
+The neoclassical bulk viscosity current originates in the different trajectories between electrons and ions due to their mass difference and inhomogeneity in the magnetic field along the field lines \cite{kobayashi_model_2017}.
 Two mathematical forms of the parallel ion (bulk) viscosity have been developed in the literature.
 Shaing \emph{et al.} \cite{shaing_bifurcation_1990} derives an expression directly for the viscosity by solving the drift kinetic equation with mass flow velocity.
 \begin{align}% Shaing Bulk Viscosity
@@ -141,11 +149,11 @@ It appears in the dispersion equation for linearized waves in a non-relativistic
 \end{align}
 \emph{\textbf{Note}} that this function is usually denoted as $Z$, but I am breaking this standard notation to avoid ambiguity with the normalized radial electric field.
 
-In addition, although this flux, at first glance, may take a similar shape to subsequently-presented fluxes, the plasma dispersion function does not allow for a direct comparison in the form of Eq.~\ref{eq:Gamma_an_g}.\todo{\color{red}REMOVE?}
+In addition, although this flux, at first glance, may take a similar shape to subsequently-presented fluxes, the plasma dispersion function does not allow for a direct comparison in the form of Eq.~\ref{eq:Gamma_an_g}.
+
 
 \subsection{Electron Anomalous Diffusion}\label{ssec:an_diffusion}
-Turbulence affects ions and electrons differently, which can cause a nonambipolar flux.
-In particular, when a drift wave turbulence interacts with the edge of plasma, it preferentially removes electron momentum out of the confined plasma \cite{itoh_model_1988} \cite{stringer_non-ambipolar_1995}.
+When a drift wave turbulence interacts with the edge of plasma, it preferentially removes electron momentum out of the confined plasma \cite{itoh_model_1988} \cite{stringer_non-ambipolar_1995}.
 The particle flux for this effect can be written as
 \begin{align} % Gamma_an original and D_an
 	\Gamma_e^\text{an} \,=\, -n_e \, &D^\text{an} \left(\frac{n^\prime}{n} \,+\,
@@ -166,6 +174,7 @@ We can normalize the electric field, rewrite the terms with `gradient' coefficie
 		\label{eq:g_an}
 \end{align}
 
+
 \subsection{Charge Exchange Friction}\label{ssec:cx_friction}
 With toroidal rotation, the charge exchange process between ions and neutrals causes a momentum imbalance for the charged plasma, as the momentum goes to the neutrals.
 This momentum loss causes a charge imbalance, leading to a current \cite{toda_theoretical_1997}.
@@ -178,6 +187,15 @@ The charge exchange rate is obtained from a qualitative scheme by Connor and Wil
 Electrons are not exchanged above a particular temperature threshold, but rather fully ionized and lost to the bulk plasma.
 The term $E_0$ is simply the ionization energy for the particular species used; hydrogen is investigated in this project, and the term is thus set to 13.6 eV.
 The coefficient $C_\text{cx}$ is a numerical constant that chooses the maximum rate.
+
+In the domain of the problem, the origin of neutrals is that of recycled particles from the divertor, and not that of the NBI.
+The profile of these therefore have a penetration depth from the edge, and drops off rapidly.
+\begin{align}
+	n_0 \,=\, \frac{\theta\,\Gamma_c}{v_{T_i}\left[1 \,+\,
+	\exp{(k(x - d))}\right]} \label{eq:neutral_density}
+\end{align}
+The maximum value of the neutrals is governed by $\frac{\theta\,\Gamma_c}{v_{T_i}}$, in which $\theta$ is some small value between 0 and 0.2.
+The penetration depth is $d$, with the rate of drop off determined by $k$.
 
 \begin{align} % Charge exchange current
 	e\,\Gamma_e^\text{cx} \,&=\,
@@ -197,20 +215,24 @@ We can write the terms in a similar fashion to Eqs.~\ref{eq:Gamma_an_g} as compa
 \end{align}
 \todo{\color{red}FINISH}
 
+
 \subsection{Ion Orbit Loss}\label{ssec:ol_loss}
-The loss of ions due to each's individual orbit is a radial current that has certainly been seen in experiments \cite{weisen_boundary_1991}.
+The loss of ions due to each individual orbit is a radial current that has certainly been seen in experiments \cite{weisen_boundary_1991}.
 Again, due to the fact that ions are significantly more massive than electrons, the size of their gyroradius and banana orbits are significantly different.
 When an ion follows a field line which is less than the distance of one gyroradius away from the last close flux surface, the ion is lost.
 This current, also referred to as the ion loss cone, is compounded by the fact that it is highly affected by the electric field.
 \begin{align} % Ion orbit loss definition
-	\Gamma_i^\text{OL} \,=\, n \, \rho_{\theta i} \, (\nu_{ii} + \nu_{in_0})
+	\Gamma_i^\text{OL} \,=\, n \, \rho_{\theta i} \, \nu_{ii} \, \nu_{*i}
 		\sqrt{\epsilon} \, \frac{\exp\left[-\sqrt{\nu_{*i} + Z^4 +
 		\left(\frac{x}{w_{bi}}\right)^4}\right]}{\sqrt{\nu_{*i} + Z^4 +
 		\left(\frac{x}{w_{bi}}\right)^4}} \label{eq:Gamma_OL}
 \end{align}
-The term $\nu_{*i}$ is the ion-ion collision frequency upon the ion banana bounce frequency, and $\nu_{in_0}$ is the ion-neutral collision frequency.
-The sum of the ion-ion and ion-neutral frequency serves as the effective detrapping frequency.
+The term $\nu_{*i}$ is the ion-ion collision frequency upon the ion banana bounce frequency.%, and $\nu_{in_0}$ is the ion-neutral collision frequency.
+%The sum of the ion-ion and ion-neutral frequency serves as the effective detrapping frequency.
 This particular form highly localizes the effect of the radial electric field \cite{kobayashi_experimental_2016}.
+
+Similar to bulk viscosity, and contrasting charge exchange friction and electron anomalous diffusion, this flux is explicitly nonlinear in $Z$.
+
 
 \section{Radial Electric Field Equation}\label{sec:Z_equation}
 A rigorous theory on what causes the diffusion coefficients $D$ and $\chi$ is still unknown.
@@ -250,11 +272,13 @@ It was found that ``a flattened (steep) radial equilibrium gradient tends to enh
 Staps uses this form, with $c = 0.5$ and $\gamma = 2$ \cite{staps_backstepping_2017}.
 Another form includes both the field itself and its shear \cite{paquay_studying_2012}
 \begin{align} % Flow-Shear equation
-	D(Z, Z^{\prime}) \,=\, D_\text{min} \,+\, \frac{D_\text{max} - D_\text{min}}{1 + a_1 Z^2 + a_2 Z \cdot Z^{\prime} + a_3 (Z^{\prime})^2} \label{eq:flow-shear}
+	D(Z, Z^{\prime}) \,=\, D_\text{min} \,+\,
+		\frac{D_\text{max} - D_\text{min}}{1 + a_1 Z^2 + a_2 Z \cdot Z^{\prime}
+		+ a_3 (Z^{\prime})^2} \label{eq:flow_shear_diffusivity}
 \end{align}
 \todo{\color{red}Expand more!}
 
-\section{Boundary Conditions}\label{sec:boundary_conditions}
+\section{Boundary Conditions and Initial Values}\label{sec:boundary_conditions}
 The set of aforementioned PDE's is evaluated in a domain that is small enough to exclude the inner (core) boundary from any possible particle and heat sources.
 In this model, this boundary to the domain is $x = L$, for some positive length $L$, with the core is assumed to be at $x \gg L$.
 It also requires the domain to be sufficiently large to fully-encompass the transport barrier and ignore any possible boundary effects of the barrier itself.
