Appendix needs some work; many todos

--- a/Thesis/Appendices/Code.tex
+++ b/Thesis/Appendices/Code.tex
@@ -1,6 +1,6 @@
-\chapter{Code}\label{chapter:Code}
+\section{Code}\label{chapter:Code}
 
-\inputminted[firstline=25, lastline=41, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
+\inputminted[firstline=21, lastline=39, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
 
-\inputminted[firstline=119, lastline=133, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
+\inputminted[firstline=92, lastline=107, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
 
